--- a/mtlemmon_project/BCFire.plist
+++ b/mtlemmon_project/BCFire.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BCFire0</key>
-	<string>This is the first page of information about fire.  Fire is really cool because it can burn things.  Burning things is fun :)</string>
+	<string>This is the first page of information about fire.  Fire is really cool because it can burn things.  Burning things is fun :).  I am just going to add random text so that i can check the length. blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</string>
 	<key>BCFire1</key>
 	<string>Now the second page</string>
 	<key>BCFire2</key>
