--- a/mtlemmon_project/MCGeoHistory.plist
+++ b/mtlemmon_project/MCGeoHistory.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>MCGeoHistory</key>
-	<string></string>
+	<key>MCGeoHistory0</key>
+	<string>Molino Canyon: Geo History                  The Gneiss rock:                              What is it?                             Pronounced &quot;nice&quot;. It&apos;s the main grey colored rock.</string>
 </dict>
 </plist>
