--- a/mtlemmon_project/BCFire.plist
+++ b/mtlemmon_project/BCFire.plist
@@ -3,14 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>BCFire0</key>
-	<string>This is the first page of information about fire.  Fire is really cool because it can burn things.  Burning things is fun :).  I am just going to add random text so that i can check the length. blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</string>
-	<key>BCFire1</key>
-	<string>Now the second page</string>
-	<key>BCFire2</key>
-	<string>Finally, page number 3 (testing)</string>
-	<key>BCFire3</key>
-	<string>This is the first page of information about fire.  Fire is really cool because it can burn things.  Burning things is fun :).  I am just going to add random text so that i can check the length. blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah This is the first page of information about fire.  Fire is really cool because it can burn things.  Burning things is fun :).  I am just going to add random text so that i can check the length. blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah This is the first page of information about fire.  Fire is really cool because it can burn things.  Burning things is fun :).  I am just going to add random text so that i can check the length. blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah This is the first page of information about fire.  Fire is really cool because it can burn things.  Burning things is fun :).  I am just going to add random text so that i can check the length. blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah This is the first page of information about fire.  Fire is really cool because it can burn things.  Burning things is fun :).  I am just going to add random text so that i can check the length. blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</string>
-	<key>BCFire4</key>
-	<string></string>
+	<string>Middle Bear: Fire                               Can you find this tree?                   Ponderosa Pine                                       -Fire Resistant                                          Lower Energy Fire (5 years)                                   Problem w/ new trees                                 -Intermediate height = hotter fires</string>
 </dict>
 </plist>
