--- a/mtlemmon_project/BCLifeZones.plist
+++ b/mtlemmon_project/BCLifeZones.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>BCLifeZone0</key>
-	<string></string>
+	<key>BCLifeZones0</key>
+	<string>Middle Bear: Life Zones                    Pine-Oak Woodland 6000 – 7000 feet.                        As you travel between stop 1 and stop 2, you may notice that the plants get green and taller. Oaks have become more abundant and are surrounded by Ponderosa pines and a few Douglas firs, but can still agaves can be found around the picnic site. Rain falls here much more than in the lower parts of the mountain, usually between 18 and 26 inches per year.                                       Activity: Go to the stream bed and see if there is water flowing.</string>
 </dict>
 </plist>
