--- a/mtlemmon_project/MCGeoHistory.plist
+++ b/mtlemmon_project/MCGeoHistory.plist
@@ -3,6 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>MCGeoHistory0</key>
-	<string>Molino Canyon: Geo History                  The Gneiss rock:                              What is it?                             Pronounced &quot;nice&quot;. It&apos;s the main grey colored rock.</string>
+	<string>Molino Canyon: Geo History                                  The Gneiss rock:                              What is it?                             Pronounced &quot;nice&quot;. It&apos;s the main grey colored rock.                                             - What are the white lines you see on them?Quartz veins, with feldspar in there too.</string>
+	<key>MCGeoHistory1</key>
+	<string>- How was it formed?It is a metamorphic rock. It started off as granite and then under lots of heat and pressure (inside the earth/under the earth’s surface) got squashed/metamorphosed into gneiss. See the lineation of minerals?                                                     - If you see one, take note of the colorand size of each individual mineral/grain, you can compare that withrock units further up the mountain, namingly at Stop 3: Windy Point.</string>
 </dict>
 </plist>
