--- a/mtlemmon_project/WPLifeZones.plist
+++ b/mtlemmon_project/WPLifeZones.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>WPLifeZones0</key>
-	<string></string>
+	<string>Windy Point: Life Zones                           Windy Point Vista ~6500 ft.                              This life zone has many similarities to the last stop, but there is a noticeable change in the plants. There are not as many of the tall pines! Why is that? On most days, this area is very windy and the taller plants don’t hold up well in the wind. There are still small pines tucked between some of the larger rocks. The plants here are predominately oaks, along with Manzanita and other shrubs. Manzanitas differ by their red bark. Native Americans used different parts of the plant for medicinal purposes.                                    Activity: Figure out what direction the wind is coming from.</string>
 </dict>
 </plist>
