--- a/mtlemmon_project/MCLifeZones.plist
+++ b/mtlemmon_project/MCLifeZones.plist
@@ -3,6 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>MCLifeZones0</key>
-	<string>~4100 feet  Life Zone: Semi-desert grassland and Oak woodland 3900 - 5600 feet   Molina Canyon Vista lies in a transition of two zones. Notice the many Ocotillo as you walk down the short trails. Ocotillos have beautiful red flowers than can bloom many times per year, after rains. Also in this zone are several types of oaks; these trees will become more prominent as you ascend the mountain. You can also see the prickly pear cactus as well as different types of agave along the path and cottonwood and ash trees growing along the drainages below the vista.      Activity:    Take a picture of an ocotillo and upload it to this app.</string>
+	<string>Molino Basin: Life Zones                                 ~4100 feet                                               Life Zone: Semi-desert grassland and Oak woodland 3900 - 5600 feet                                           Molina Canyon Vista lies in a transition of two zones. Notice the many Ocotillo as you walk down the short trails. Ocotillos have beautiful red flowers than can bloom many times per year, after rains. Also in this zone are several types of oaks; these trees will become more prominent as you ascend the mountain. </string>
+	<key>MCLifeZones1</key>
+	<string>You can also see the prickly pear cactus as well as different types of agave along the path and cottonwood and ash trees growing along the drainages below the vista.                                Activity:                                                   Take a picture of an ocotillo and upload it to our server!</string>
 </dict>
 </plist>
