--- a/mtlemmon_project/WPGeology.plist
+++ b/mtlemmon_project/WPGeology.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>WPGeology0</key>
-	<string>WPGeo</string>
+	<string>Windy Point: Geology                                                     Hoodoos form in arid regions, primarily by a combination of erosion from running water and/or powerful winds</string>
 </dict>
 </plist>
