--- a/mtlemmon_project/IRFire.plist
+++ b/mtlemmon_project/IRFire.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>IRFire0</key>
-	<string>IRFire</string>
+	<string>Inspiration Point: Fire                                                                           Bullock and Aspen Fires                                                             Fuel buildup (30 years)                                                      -higher intensity fire                                                                                  Regrowth                                                                                                                        -Conifers vs. Aspen                                                                 Promising for housing</string>
 </dict>
 </plist>
