--- a/mtlemmon_project/IRLifeZone.plist
+++ b/mtlemmon_project/IRLifeZone.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>IRLifeZone0</key>
-	<string>IRLife</string>
+	<string>Inspiration Point: Life Zones                         ~7960 feet                                                                                          Ponderosa Pine Forest 7000-8200 feet                                                                       The first thing noticeably different here is the damage done to the landscape by the Aspen Fire of 2003. Many of the trees and other plants were killed, but saplings can be seen starting to sprout in their place.                                                                                 The Dominant plants of this zone are firs and pines, but maples, oaks, and aspens are also numerous in the area. The average precipitation here and up to the top of Mount Lemmon (at 9157 feet) is 30 inches, much of it falling as snow.                                                      Activity: How many degrees difference do you think it is here?</string>
 </dict>
 </plist>
